setup grid and started adding in photos. created json object

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,5 +1,29 @@
-$primary-color: blue;
+$primary-font: Arial, Helvetica, sans-serif; //import actual font
 
-h2{
-    color: $primary-color;
+html{
+    height: 100%;
+}
+
+#root{
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 28vw 20px auto;
+    grid-template-rows: auto;
+    grid-template-areas:
+    "filters . portfolios";
+    grid-auto-flow: column;
+}
+
+#filters-container{
+    grid-area: filters;
+    background-color: gray;
+}
+
+#portfolio-section{
+    grid-area: portfolios;
+    background-color: darkgray;
+}
+h2 {
+    font-family: $primary-font;
 }
