Created and added component for portfolios

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -22,7 +22,7 @@ html{
 
 #portfolio-section{
     grid-area: portfolios;
-    background-color: darkgray;
+    //background-color: darkgray;
 }
 h2 {
     font-family: $primary-font;
