--- a/sass/styles.css
+++ b/sass/styles.css
@@ -1,12 +1,81 @@
 html {
   height: 100%;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
+}
+
+#root {
+  width: 100%;
+  height: 100%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 25vw 20px auto;
+      grid-template-columns: 25vw 20px auto;
+  -ms-grid-rows: auto;
+      grid-template-rows: auto;
+      grid-template-areas: "filters . portfolios";
+  grid-auto-flow: column;
+}
+
+#filters-container {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: filters;
+  background-color: gray;
+}
+
+#portfolio-section {
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
+  grid-area: portfolios;
+  width: 100%;
+}
+
+.portfolio-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  padding-top: 50px;
 }
 
 .pfp {
-  width: 32px;
+  width: 64px;
 }
 
-h2 {
-  font-family: Arial, Helvetica, sans-serif;
+.info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 28vw;
+  padding: 0 20px;
+}
+
+.info .name {
+  color: #222222;
+}
+
+.info .chip {
+  background-color: #f4f4f4;
+  padding: 5px;
+  border-radius: 8px;
+}
+
+.photo-holder {
+  width: 260px;
+  height: 180px;
+  border-radius: 8px;
+  margin: 0 10px;
+}
+
+.photo-holder img {
+  padding: 0;
 }
 /*# sourceMappingURL=styles.css.map */
