--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -4,32 +4,66 @@ sans-serif; //import actual font
 
 html {
     height: 100%;
-}
-
-// #root{
-//     width: 100%;
-//     height: 100%;
-//     display: grid;
-//     grid-template-columns: 28vw 20px auto;
-//     grid-template-rows: auto;
-//     grid-template-areas:
-//     "filters . portfolios";
-//     grid-auto-flow: column;
-// }
-
-// #filters-container{
-//     grid-area: filters;
-//     background-color: gray;
-// }
-
-// #portfolio-section{
-//     grid-area: portfolios;
-//     //background-color: darkgray;
-// }
-.pfp {
-    width: 32px;
-}
-
-h2 {
     font-family: $primary-font;
+    font-size: 14px;
+}
+
+#root{
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 25vw 20px auto;
+    grid-template-rows: auto;
+    grid-template-areas:
+    "filters . portfolios";
+    grid-auto-flow: column;
+}
+
+#filters-container{
+    grid-area: filters;
+    background-color: gray;
+}
+
+#portfolio-section{
+    grid-area: portfolios;
+    width: 100%;
+}
+
+.portfolio-content{
+    display: flex;
+    flex-direction: row;
+    padding-top: 50px;
+}
+
+//profile picture styles
+.pfp {
+    width: 64px;
+}
+
+.info{
+    display: flex;
+    flex-direction: column;
+    width: 28vw;
+    padding: 0 20px;
+    .name{
+        color: #222222;
+    }
+    
+    .chip{
+        background-color: #f4f4f4;
+        padding: 5px;
+        border-radius: 8px;
+    }
+}
+
+//Container div around portfolio pictures
+.photo-holder{
+    width: 260px;
+    height: 180px;
+    border-radius: 8px;
+    margin: 0 10px;
+
+    img{
+        padding: 0;
+    }
 }
