--- a/sass/styles.css
+++ b/sass/styles.css
@@ -1,6 +1,21 @@
+@font-face {
+  font-family: 'Neue Regular';
+  src: url("neueregular.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: 'Neue Bold';
+  src: url("neuebold.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: 'Neue Medium';
+  src: url("neuemedium.ttf") format("truetype");
+}
+
 html {
   height: 100%;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Neue Regular, Arial, Helvetica, sans-serif;
   font-size: 14px;
 }
 
@@ -15,6 +30,7 @@ html {
       grid-template-rows: auto;
       grid-template-areas: "filters . portfolios";
   grid-auto-flow: column;
+  font-family: Neue Regular;
 }
 
 #filters-container {
@@ -60,6 +76,19 @@ html {
 
 .info .name {
   color: #222222;
+  padding-top: 3px;
+  font-family: Neue Bold;
+}
+
+.info .bio {
+  padding-top: 5px;
+}
+
+.info .chip-container {
+  white-space: nowrap;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
 }
 
 .info .chip {
@@ -77,5 +106,18 @@ html {
 
 .photo-holder img {
   padding: 0;
+}
+
+.photo-holder .view-portfolio {
+  color: #F76902;
+  font-family: Neue Bold;
+  float: right;
+  padding: 15px;
+  font-size: 16px;
+}
+
+.photo-holder .view-portfolio:hover {
+  color: #7a7a7a;
+  text-decoration: none;
 }
 /*# sourceMappingURL=styles.css.map */
