--- a/sass/styles.css
+++ b/sass/styles.css
@@ -24,13 +24,13 @@ html {
   height: 100%;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 25vw 20px auto;
-      grid-template-columns: 25vw 20px auto;
+  -ms-grid-columns: 25vw 5vw auto;
+      grid-template-columns: 25vw 5vw auto;
   -ms-grid-rows: auto;
       grid-template-rows: auto;
       grid-template-areas: "filters . portfolios";
   grid-auto-flow: column;
-  font-family: Neue Regular;
+  font-family: Neue Regular, sans-serif;
 }
 
 #filters-container {
@@ -56,6 +56,8 @@ html {
       -ms-flex-direction: row;
           flex-direction: row;
   padding-top: 50px;
+  padding-bottom: 6vh;
+  border-bottom: 1px solid #cfcfcf;
 }
 
 .pfp {
@@ -70,7 +72,7 @@ html {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 28vw;
+  width: 25vw;
   padding: 0 20px;
 }
 
@@ -85,16 +87,27 @@ html {
 }
 
 .info .chip-container {
-  white-space: nowrap;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.info .chips {
+  padding: 5px 8px 5px 0;
+  margin-bottom: 5px;
 }
 
 .info .chip {
   background-color: #f4f4f4;
   padding: 5px;
   border-radius: 8px;
+  white-space: nowrap;
 }
 
 .photo-holder {
@@ -117,7 +130,7 @@ html {
 }
 
 .photo-holder .view-portfolio:hover {
-  color: #7a7a7a;
+  color: #222222;
   text-decoration: none;
 }
 /*# sourceMappingURL=styles.css.map */
