--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -15,8 +15,14 @@
 
 html {
     height: 100%;
+    min-width: 100%;
     font-family: Neue Regular, Arial, Helvetica, sans-serif;
     font-size: 14px;
+}
+
+body{
+    height: 100%;
+    min-width: 100%;
 }
 
 #root {
@@ -29,16 +35,19 @@ html {
         "filters . portfolios";
     grid-auto-flow: column;
     font-family: $primary-font;
+    padding: 0;
 }
 
 #filters-container {
     grid-area: filters;
-    background-color: gray;
+    background-color: #FAFAFA;
+    border-right: 1px solid #cfcfcf;
 }
 
 #portfolio-section {
     grid-area: portfolios;
     width: 100%;
+    padding-top: 20px;
 }
 
 .portfolio-content {
@@ -101,6 +110,8 @@ html {
 
     img {
         padding: 0;
+        width: 100%;
+        height: 100%;
     }
 
     .view-portfolio {
