--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -70,6 +70,7 @@ body{
     padding: 0 20px;
 
     .name {
+        font-size: 24px;
         color: #222222;
         padding-top: 3px;
         font-family: Neue Bold;
