started the filtering component

--- a/sass/styles.css
+++ b/sass/styles.css
@@ -40,6 +40,14 @@ body {
   padding: 0;
 }
 
+#nav-container {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: filters;
+  background-color: #FAFAFA;
+  border-right: 1px solid #cfcfcf;
+}
+
 #filters-container {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
@@ -68,6 +76,8 @@ body {
   padding-bottom: 6vh;
   border-bottom: 1px solid #cfcfcf;
 }
+
+/* Portfolio component */
 
 .pfp {
   width: 64px;
@@ -145,4 +155,41 @@ body {
   color: #222222;
   text-decoration: none;
 }
+
+/* Portfolio Mobile Styles */
+
+
+/* Filtering component */
+.title {
+    font-size: 32px;
+    color: #222222;
+    padding-top: 3px;
+    font-family: Neue Bold;
+    margin-left: 10px;
+    margin-top: 30px;
+    font-weight: 900;
+}
+
+.categories {
+    background-color: white;
+    color: black;
+    border: none;
+    font-size: 18px;
+    margin: .5rem;
+}
+
+.refine {
+     font-size: 16px;
+    color: #222222;
+    padding-top: 3px;
+    font-family: Neue Bold;
+    margin-left: 10px;
+    margin-top: 30px;
+    font-weight: 900;
+}
+
+
+/* Filtering Mobile Styles */
+
+
 /*# sourceMappingURL=styles.css.map */
