--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -2,16 +2,20 @@
     font-family: 'Neue Regular';
     src: url('neueregular.ttf') format('truetype');
 }
-  @font-face {
+
+@font-face {
     font-family: 'Neue Bold';
     src: url('neuebold.ttf') format('truetype');
-  }
-  @font-face {
+}
+
+@font-face {
     font-family: 'Neue Medium';
     src: url('neuemedium.ttf') format('truetype');
-  }
-  
-  $primary-font: Neue Regular, sans-serif;
+}
+
+$primary-font: Neue Regular,
+sans-serif;
+$border: 1px solid #cfcfcf;
 
 html {
     height: 100%;
@@ -20,7 +24,7 @@ html {
     font-size: 14px;
 }
 
-body{
+body {
     height: 100%;
     min-width: 100%;
 }
@@ -41,7 +45,8 @@ body{
 #filters-container {
     grid-area: filters;
     background-color: #FAFAFA;
-    border-right: 1px solid #cfcfcf;
+    border-right: $border;
+    padding: 2vw;
 }
 
 #portfolio-section {
@@ -55,7 +60,7 @@ body{
     flex-direction: row;
     padding-top: 50px;
     padding-bottom: 6vh;
-    border-bottom: 1px solid #cfcfcf;
+    border-bottom: $border;
 }
 
 //profile picture styles
@@ -89,7 +94,7 @@ body{
 
     //div around the spans of chips
     //used for padding and margins
-    .chips{
+    .chips {
         padding: 5px 8px 5px 0;
         margin-bottom: 5px;
     }
@@ -116,17 +121,18 @@ body{
     }
 
     .view-portfolio {
-        color:#F76902;
+        color: #F76902;
         font-family: Neue Bold;
         float: right;
-        padding: 15px;
+        margin: 15px;
         font-size: 16px;
     }
+
     .view-portfolio:hover {
         color: #222222;
         text-decoration: none;
-      }
-      
+    }
+
 }
 
 /* Portfolio Mobile Styles */
@@ -148,22 +154,16 @@ body{
     width: 100%;
 }
 
-
-/* Solid border */
-hr.solid {
-    border-top: 1px solid #bbb;
-    width: 85%;
-}
-
-
 .refine {
     font-size: 16px;
     color: #222222;
-    padding-top: 3px;
     font-family: Neue Bold;
+    border-bottom: $border;
+    padding-bottom: 15px;
     margin-left: 28px;
     margin-top: 30px;
-    font-weight: 900;
+    width: 75%;
+    font-weight: bold;
 }
 
 .searchterm {
@@ -172,7 +172,7 @@ hr.solid {
     margin: 20px 10px 10px 10px;
     padding-left: 27px;
     font-size: 13px;
-    width: 240px;
+    width: 18vw;
     height: 42px;
 }
 
@@ -180,6 +180,21 @@ hr.solid {
     color: #fafafa;
     border: 1px solid #fafafa;
     color: black;
+}
+
+#search-categories-container{
+    margin-bottom: 200px;
+}
+
+.add-portfolio {
+    color: #F76902;
+    font-family: Neue Bold;
+    font-size: 16px;
+}
+
+.add-portfolio:hover {
+    color: #222222;
+    text-decoration: none;
 }
 
 /* Filtering Mobile Styles */
