--- a/sass/styles.css
+++ b/sass/styles.css
@@ -148,7 +148,6 @@ body {
 }
 
 /* Portfolio Mobile Styles */
-
 /* Filtering component */
 .title {
   font-size: 32px;
@@ -213,71 +212,87 @@ body {
   width: 300px;
   display: inline-block;
   background-color: #fafafa;
+  -webkit-transition: all .5s ease;
   transition: all .5s ease;
   position: relative;
   font-size: 14px;
   color: #474747;
   height: 100%;
-  text-align: left
+  text-align: left;
 }
+
 .dropdown .select {
-    cursor: pointer;
-    display: block;
-    padding: 10px
+  cursor: pointer;
+  display: block;
+  padding: 10px;
 }
+
 .dropdown .select > i {
-    font-size: 13px;
-    color: #888;
-    cursor: pointer;
-    transition: all .3s ease-in-out;
-    float: right;
-    line-height: 20px
+  font-size: 13px;
+  color: #888;
+  cursor: pointer;
+  -webkit-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
+  float: right;
+  line-height: 20px;
 }
+
 .dropdown:hover {
-    box-shadow: 0 0 4px rgb(204, 204, 204)
+  -webkit-box-shadow: 0 0 4px #cccccc;
+          box-shadow: 0 0 4px #cccccc;
 }
+
 .dropdown:active {
-    background-color: #fafafa;
+  background-color: #fafafa;
 }
+
 .dropdown.active:hover,
 .dropdown.active {
-    box-shadow: 0 0 4px rgb(204, 204, 204);
-    border-radius: 2px 2px 0 0;
-    background-color: #fafafa;
+  -webkit-box-shadow: 0 0 4px #cccccc;
+          box-shadow: 0 0 4px #cccccc;
+  border-radius: 2px 2px 0 0;
+  background-color: #fafafa;
 }
+
 .dropdown.active .select > i {
-    transform: rotate(-90deg)
+  -webkit-transform: rotate(-90deg);
+          transform: rotate(-90deg);
 }
+
 .dropdown .dropdown-menu {
-    position: absolute;
-    background-color: #fff;
-    width: 100%;
-    left: 0;
-    margin-top: 1px;
-    box-shadow: 0 1px 2px rgb(204, 204, 204);
-    border-radius: 0 1px 2px 2px;
-    overflow: hidden;
-    display: none;
-    max-height: 144px;
-    overflow-y: auto;
-    z-index: 9
+  position: absolute;
+  background-color: #fff;
+  width: 100%;
+  left: 0;
+  margin-top: 1px;
+  -webkit-box-shadow: 0 1px 2px #cccccc;
+          box-shadow: 0 1px 2px #cccccc;
+  border-radius: 0 1px 2px 2px;
+  overflow: hidden;
+  display: none;
+  max-height: 144px;
+  overflow-y: auto;
+  z-index: 9;
 }
+
 .dropdown .dropdown-menu li {
-    padding: 10px;
-    transition: all .2s ease-in-out;
-    cursor: pointer
-} 
+  padding: 10px;
+  -webkit-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+  cursor: pointer;
+}
+
 .dropdown .dropdown-menu {
-    padding: 0;
-    list-style: none
+  padding: 0;
+  list-style: none;
 }
+
 .dropdown .dropdown-menu li:hover {
-    background-color: #fafafa;
+  background-color: #fafafa;
 }
+
 .dropdown .dropdown-menu li:active {
-    background-color: #fafafa;
+  background-color: #fafafa;
 }
-
-/* Filtering Mobile Styles */
-
+/**************** ADD PORTFOLIO FORM ************/
 /*# sourceMappingURL=styles.css.map */
