--- a/sass/styles.css
+++ b/sass/styles.css
@@ -16,7 +16,7 @@
 html {
   height: 100%;
   min-width: 100%;
-  font-family: Neue Regular, Arial, Helvetica, sans-serif;
+  font-family: Neue Regular, sans-serif, Arial, Helvetica, sans-serif;
   font-size: 14px;
 }
 
