--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -284,11 +284,17 @@ form {
     font-family: $primary-font;
 }
 
+#form-container {
+    margin-left: 25px;
+    margin-right: 25px;
+}
+
 .form-control {
     border: none !important;
     border-bottom: 1px solid #aaaaaa !important;
     border-radius: 0px !important;
     margin-bottom: 3em !important;
+    background-color: #fafafa;
 }
 
 .form-control:focus {
@@ -297,6 +303,7 @@ form {
     border-color: inherit;
     -webkit-box-shadow: none;
     box-shadow: none;
+    background-color: #fafafa;
 }
 
 .d-block {
@@ -304,14 +311,14 @@ form {
     font-size: 1.3em;
 }
 
-#test.btn.btn-primary {
+#test.btn.btn-primary, .next-btn {
     background-color: $rit-orange !important;
     text-transform: capitalize;
-    font-size: 1.2em;
+    font-size: 1.1em;
     border-radius: 24px;
 }
 
-#test.btn.btn-primary:focus {
+#test.btn.btn-primary:focus, .next-btn:focus {
     background-color: #222222 !important;
 }
 
@@ -345,16 +352,74 @@ form {
 
 #portfolio-nav li a {
     text-decoration: none;
-    color: black;
+    color: #000;
     display: block;
     text-align: center;
     padding: 14px 16px;
 }
 
 #portfolio-nav li a:hover {
-    font-family: Neue Bold;
+    font-weight: bold;
     border-bottom: 3px solid $rit-orange;
 }
+
+#portfolio-nav li a:active {
+    font-weight: bold;
+    border-bottom: 3px solid $rit-orange;
+}
+
+#personal-info-link a {
+    font-weight: bold;
+    border-bottom: 3px solid $rit-orange;
+}
+
+#top-nav {
+    width: 100%;
+    height: 70px;
+    background-color: #fafafa;
+    border-bottom: $border;
+}
+
+#portfolio-title {
+    font-family: Neue Bold;
+    font-size: 2em;
+    line-height: 70px;
+    padding-left: 20px;
+}
+
+#back-to-home a {
+    font-family: $primary-font;
+    float: right;
+    line-height: 70px;
+    font-weight: bold;
+    padding-right: 20px;
+    color: $rit-orange;
+}
+
+#back-to-home a:hover {
+    color: #222222;
+    text-decoration: none;
+}
+
+.information-divs {
+    display: none;
+}
+
+.information-divs:target {
+    display: block !important;
+    background-color: #fafafa;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 30px 25px 25px 25px;
+    margin-bottom: 20px;
+}
+
+#button-div {
+    text-align: center;
+}
+
+
 
 /*# sourceMappingURL=styles.css.map */
 
